--- a/README
+++ b/README
@@ -3,3 +3,5 @@ cpp_trainning
 
 Implementation of known algorithms and data structures in c++
 
+To compile run:  cmake  ~/build_dir -DBOOST_ROOT=path -DCMAKE_CXX_FLAGS="-std=c++0x"
+
