--- a/README
+++ b/README
@@ -26,10 +26,10 @@ Node based
   3) Even though one can use memory pools with allocators, they are more suitable
      for situations where the container size must increase on demand and one
      cannot place an upper bound on the maximum container size. In my job I
-     often know in advance how big the container can increase. That means I
-     am paying for what I do not need.
+     often can place an upper bound on the container size. That means I am
+     paying for what I do not need.
 
-  These are some problems allocators cannot handle properly.
+  This is the problem that allocators cannot handle properly:
 
   a) It is difficult or maybe impossible to write an allocator with constant
      allocation time. With "contant" I mean something that does no depend on
@@ -53,14 +53,31 @@ Node based
                     avail = p;
 
      We see that just a couple of instructions are used, which makes allocation
-     and deallocation constant time.
+     and deallocation constant time. See the class node_pool for how I handle
+     this.
+
+Binary Searce Trees
+===================
 
 Compilation
 =============
 
-  To compile you will need a C++11 compiler and CMake. Boost libraries are optional.
+  To compile you will need a C++11 compiler, CMake and Boost. This is the
+  command I use on cmake:
 
-  cmake  ~/rtcpp-dir -DBOOST_ROOT=path -DCMAKE_BUILD_TYPE=Debug
-  -DCMAKE_CXX_COMPILER="clang++" -DCMAKE_CXX_FLAGS="-std=c++0x -Wall -Wextra -Werror"
-  -DCMAKE_INSTALL_PREFIX="~/local"
+  cmake ../../rtcpp/ -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -std=c++0x -Ofast -fipa-pta \
+  -flto -funsafe-loop-optimizations" -DCMAKE_BUILD_TYPE=Release \
+  -DCMAKE_CXX_COMPILER=g++ -DBOOST_ROOT=${BOOST}
+
+  I have experienced some strange problems with std::revers_iterators on gcc. for example:
+
+  - Clang - Release : Tests succeed.
+  - Clang - Debug   : Tests succeed.
+  - GCC   - Release : Test 3 fails. Unclean compilation
+  - GCC   - Debug   : Tests succeed. Unclean compilation
+
+  Compiler versions are:
+
+  GCC 4.8.2
+  Clang 3.4
 
